# RomNumCalc

./: .gitignore  BUILD.txt  Makefile  Makefile.gnu  Makefile.old  README.md  configure.ac
src/: Makefile.am
src/app/: Makefile.am  RomNumCalcApp.c  RomNumCalcApp.h
src/lib/: Makefile.am  RomNumMath.c  RomNumMath.h
src/tests/: Makefile.am  TestRomNumCalc.c
